# python_rust_showcase

./: .gitignore  Cargo.toml  pyproject.toml
example/: main.py  tempCodeRunnerFile.py
src/: lib.rs
thelibrary/parray-0.1.0.dist-info/: METADATA  RECORD  direct_url.json
thelibrary/python_rust_showcase/: __init__.py
